# MSTG

./: .gitignore  CMakeLists.txt
CommonResourcesMethods/: CMakeLists.txt
CommonResourcesMethods/include/: Scene.h  UDPSocket.h
CommonResourcesMethods/src/: AssetManager.cpp  Methods.cpp  Scene.cpp
SceneBulletHell/: CMakeLists.txt
SceneBulletHell/include/: BehaviourController.h  Collider.h  GameObject.h  Moveable.h  ObjCreator.h
SceneBulletHell/src/: BehaviourController.cpp  GameObject.cpp
SceneStartMenu/: CMakeLists.txt
SceneStartMenu/include/: SceneStartMenu.h
TestBulletHell/: CMakeLists.txt
TestScene/: CMakeLists.txt
TestScene/src/: Source.cpp
TestStartMenu/: CMakeLists.txt
